--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(format,vetiver_model)
 S3method(glue_spec_summary,array)
 S3method(glue_spec_summary,data.frame)
 S3method(glue_spec_summary,default)
+S3method(handler_predict,H2OMultinomialModel)
+S3method(handler_predict,H2ORegressionModel)
 S3method(handler_predict,Learner)
 S3method(handler_predict,default)
 S3method(handler_predict,glm)
@@ -14,6 +16,8 @@ S3method(handler_predict,ranger)
 S3method(handler_predict,train)
 S3method(handler_predict,workflow)
 S3method(handler_predict,xgb.Booster)
+S3method(handler_startup,H2OMultinomialModel)
+S3method(handler_startup,H2ORegressionModel)
 S3method(handler_startup,Learner)
 S3method(handler_startup,default)
 S3method(handler_startup,ranger)
@@ -23,10 +27,18 @@ S3method(handler_startup,xgb.Booster)
 S3method(map_request_body,array)
 S3method(map_request_body,data.frame)
 S3method(map_request_body,default)
+S3method(model_package,default)
+S3method(model_package,H2OMultinomialModel)
+S3method(model_package,H2ORegressionModel)
+S3method(model_unpackage,default)
+S3method(model_unpackage,H2OMultinomialModel)
+S3method(model_unpackage,H2ORegressionModel)
 S3method(predict,vetiver_endpoint)
 S3method(predict,vetiver_model)
 S3method(print,vetiver_endpoint)
 S3method(print,vetiver_model)
+S3method(vetiver_create_description,H2OMultinomialModel)
+S3method(vetiver_create_description,H2ORegressionModel)
 S3method(vetiver_create_description,Learner)
 S3method(vetiver_create_description,default)
 S3method(vetiver_create_description,glm)
@@ -35,6 +47,8 @@ S3method(vetiver_create_description,ranger)
 S3method(vetiver_create_description,train)
 S3method(vetiver_create_description,workflow)
 S3method(vetiver_create_description,xgb.Booster)
+S3method(vetiver_create_meta,H2OMultinomialModel)
+S3method(vetiver_create_meta,H2ORegressionModel)
 S3method(vetiver_create_meta,Learner)
 S3method(vetiver_create_meta,default)
 S3method(vetiver_create_meta,ranger)
@@ -48,6 +62,8 @@ S3method(vetiver_prepare_model,lm)
 S3method(vetiver_prepare_model,ranger)
 S3method(vetiver_prepare_model,train)
 S3method(vetiver_prepare_model,workflow)
+S3method(vetiver_ptype,H2OMultinomialModel)
+S3method(vetiver_ptype,H2ORegressionModel)
 S3method(vetiver_ptype,Learner)
 S3method(vetiver_ptype,default)
 S3method(vetiver_ptype,glm)
