--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,20 +6,18 @@ S3method(format,vetiver_model)
 S3method(glue_spec_summary,array)
 S3method(glue_spec_summary,data.frame)
 S3method(glue_spec_summary,default)
-S3method(handler_predict,H2OMultinomialModel,handler_predict.h2o)
-S3method(handler_predict,H2ORegressionModel,handler_predict.h2o)
 S3method(handler_predict,Learner)
 S3method(handler_predict,default)
 S3method(handler_predict,glm)
+S3method(handler_predict,h2o)
 S3method(handler_predict,lm)
 S3method(handler_predict,ranger)
 S3method(handler_predict,train)
 S3method(handler_predict,workflow)
 S3method(handler_predict,xgb.Booster)
-S3method(handler_startup,H2OMultinomialModel,handler_startup.h2o)
-S3method(handler_startup,H2ORegressionModel,handler_startup.h2o)
 S3method(handler_startup,Learner)
 S3method(handler_startup,default)
+S3method(handler_startup,h2o)
 S3method(handler_startup,ranger)
 S3method(handler_startup,train)
 S3method(handler_startup,workflow)
@@ -28,29 +26,25 @@ S3method(map_request_body,array)
 S3method(map_request_body,data.frame)
 S3method(map_request_body,default)
 S3method(model_package,default)
-S3method(model_package,H2OMultinomialModel,model_package.h2o)
-S3method(model_package,H2ORegressionModel,model_package.h2o)
+S3method(model_package,h2o)
 S3method(model_unpackage,default)
-S3method(model_unpackage,H2OMultinomialModel,model_unpackage.h2o)
-S3method(model_unpackage,H2ORegressionModel,model_unpackage.h2o)
+S3method(model_unpackage,h2o)
 S3method(predict,vetiver_endpoint)
 S3method(predict,vetiver_model)
 S3method(print,vetiver_endpoint)
 S3method(print,vetiver_model)
-S3method(vetiver_create_description,H2OMultinomialModel,vetiver_create_description.h2o)
-S3method(vetiver_create_description,H2ORegressionModel,vetiver_create_description.h2o)
 S3method(vetiver_create_description,Learner)
 S3method(vetiver_create_description,default)
 S3method(vetiver_create_description,glm)
+S3method(vetiver_create_description,h2o)
 S3method(vetiver_create_description,lm)
 S3method(vetiver_create_description,ranger)
 S3method(vetiver_create_description,train)
 S3method(vetiver_create_description,workflow)
 S3method(vetiver_create_description,xgb.Booster)
-S3method(vetiver_create_meta,H2OMultinomialModel,vetiver_create_meta.h2o)
-S3method(vetiver_create_meta,H2ORegressionModel,vetiver_create_meta.h2o)
 S3method(vetiver_create_meta,Learner)
 S3method(vetiver_create_meta,default)
+S3method(vetiver_create_meta,h2o)
 S3method(vetiver_create_meta,ranger)
 S3method(vetiver_create_meta,train)
 S3method(vetiver_create_meta,workflow)
@@ -62,11 +56,10 @@ S3method(vetiver_prepare_model,lm)
 S3method(vetiver_prepare_model,ranger)
 S3method(vetiver_prepare_model,train)
 S3method(vetiver_prepare_model,workflow)
-S3method(vetiver_ptype,H2OMultinomialModel,vetiver_ptype.h2o)
-S3method(vetiver_ptype,H2ORegressionModel,vetiver_ptype.h2o)
 S3method(vetiver_ptype,Learner)
 S3method(vetiver_ptype,default)
 S3method(vetiver_ptype,glm)
+S3method(vetiver_ptype,h2o)
 S3method(vetiver_ptype,lm)
 S3method(vetiver_ptype,ranger)
 S3method(vetiver_ptype,train)
@@ -81,6 +74,8 @@ export(handler_predict)
 export(handler_startup)
 export(load_pkgs)
 export(map_request_body)
+export(model_package)
+export(model_unpackage)
 export(new_vetiver_model)
 export(pin_example_kc_housing_model)
 export(vetiver_api)
